added paid and free flavors...

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+        }
+    }
     compileSdkVersion 27
     buildToolsVersion '27.0.0'
-
     defaultConfig {
         applicationId "com.udacity.gradle.builditbigger"
         minSdkVersion 15
@@ -18,20 +21,31 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        free {
+ //           applicationId "com.example.patrice.jokes.free"
+            applicationIdSuffix ".free"
+            versionNameSuffix "-free"
+        }
+        paid {
+ //           applicationId "com.example.patrice.jokes.paid"
+            applicationIdSuffix ".paid"
+            versionNameSuffix "-paid"
+        }
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:support-annotations:22.2.0'
     compile "com.android.support:appcompat-v7:$supportlib_version"
-    compile project(':lamejokes')
     compile project(':jokedisplayer')
-    compile 'com.google.android.gms:play-services-ads:11.0.4'
+    freeCompile 'com.google.android.gms:play-services-ads:11.0.4'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile project(path: ':backend_jokes', configuration: 'android-endpoints')
     compile 'com.google.http-client:google-http-client-android:1.23.0'
     compile 'com.google.api-client:google-api-client:1.23.0'
-    compile 'com.google.api-client:google-api-client:1.23.0'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestCompile 'com.android.support.test:runner:1.0.1'
+    testCompile 'junit:junit:4.12'
 }
