--- a/jokedisplayer/build.gradle
+++ b/jokedisplayer/build.gradle
@@ -29,4 +29,12 @@ dependencies {
     compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+
+    compile project(path: ':backend_jokes', configuration: 'android-endpoints')
+    compile 'com.google.http-client:google-http-client-android:1.23.0'
+    compile 'com.google.api-client:google-api-client:1.23.0'
+
+    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+
 }
